# dotfiles

./: .Xresources  .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmodules  .ros_setup  .tmux.conf  .vimrc  .ycm_extra_conf.py  .zshrc  HSR.sh  README.md  README.org  alias.sh  anaconda.sh  bash-aisl-pc.sh  command.md  demo.md  deploy.sh  hsr.sh  install.sh  local_config.sh  local_gp65.sh  ros.sh  setup.sh  ubuntu_config.sh  vim_plugin_manual_install.sh
.emacs.d/: Makefile  init.el  srecode-map.el  ubuntu_init.sh  yubao.el
.rviz/: SemanticMap.rviz  TUM.rviz  cv_camera.rviz  default.rviz  kinetic2.rviz  laser.rviz  persistent_settings  ptam.rviz  semantic_cloud.rviz  usb_camera.rviz
.tmuxinator/: DynamSLAM.yml  Gemfile  demo.yml  moving_object_detector.yml
.vim/: .netrwhist  .vim
CronJob/: task.sh
Examples/: .vimspector.json  CMakeLists.txt  DisplayImage.cpp  compile_commands.json  factorial  hello.cpp  hello.h  test.md  test.py
Examples/CppExample/: CMakeLists.txt  DisplayImage.cpp  compile_commands.json  factorial.cpp  hello.cpp  main.cpp
Template/: pip_install_requirements.sh  tf_generator.py
config/: airline.vim  appearence.vim  autoformat.vim  bookmark.vim  caw.vim  clang.vim  cmake.vim  ctags.vim  default.vim  doxygen.vim  fswitch.vim  ide.vim  indent-line.vim  keybinding.vim  markdown.vim  neocomplete.vim  nerdcommenter.vim  nerdtree.vim  netrw.vim  previm.vim  tagbar.vim  tmuxline.vim  undotree.vim  vim-indent-guides.vim  which-key.vim  ycm.vim
nvim/: custom.lua  keybinding.vim  myconfig.lua
scripts/: alias-common.sh  alias.sh  anaconda.sh  (+10 more)
(+24 files in other folders)
